# SC_tema_2

./: CMakeLists.txt  README.md  input.txt  output.txt  sc_t-2.cpp  sc_t-2.h
